<resources>
    <string name="app_name">Killer Radio</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Fake Call Log-->
    <string name="select_contact">Select Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_call">Date of Call</string>
    <string name="time_of_call">Time of Call</string>
    <string name="call_duration">Call Duration in Seconds</string>
    <string name="seconds">Seconds</string>
    <string name="enter_call_duration">Enter call Duration in Seconds</string>
    <string name="call_type">Call Type</string>
    <string name="random_duration">Random Duration (10 Sec - 5 min)</string>
    <string name="insert_now">Insert Now</string>
    <string name="date_of_insertion">Insert Date</string>
    <string name="time_of_insertion">Insert Time</string>
    <string name="empty_placeholder_string">.</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="enter_number">Enter Number</string>
    <string name="choose_number">Choose a Number</string>
    <string name="name_not_available">Name not provided</string>
    <string name="error_message_empty_number">Please select a contact or enter number</string>
    <string name="error_message_invalid_duration">The duration should be a number</string>
    <string name="message_successful_calllog_submission">The fake call log is successfully added!</string>
    <string name="message_error_duration_invalid_value">The duration entered is invalid and hence ignored!</string>
    <string name="message_error_duration_exceed_range">The duration entered is not in the valid range (0 to 2147483647 Seconds) and hence ignored!</string>

    <string name="submit">Submit</string>

    <string-array name="call_types">
        <item>Incoming</item>
        <item>Outgoing</item>
        <item>Missed Call</item>
    </string-array>

    <string-array name="contact_types">
        <item>Select from Contacts</item>
        <item>Select from Logs</item>
        <item>Enter Number</item>
        <item>Unknown Number</item>
    </string-array>


    <!-- Call Log Schedules Fragment -->
    <string name="empty_call_log_schedules_list">There are no call logs scheduled</string>

    <!-- Edit Call Log Fragment -->
    <string name="empty_call_log_list_message">The call log is empty!</string>
    <string name="discard">Discard</string>
    <string name="error_call_log_edit_message">Error in fetching the requested log entry !</string>
    <string name="unsaved">Unsaved</string>
    <string name="message_successful_edit_submission">The call log is successfully edited!</string>
</resources>
