<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dtv.killerradio.FakeCallLogFragment">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--[START] NUMBER Selection using EditText-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/empty_placeholder_string" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/contact_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_contact" />
            </LinearLayout>
            <!--[END] NUMBER Selection using EditText-->

            <!-- [START] NUMBER Selection using Dialog -->
            <LinearLayout
                android:id="@+id/contact_selection_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/contact_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_contact" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/select_contact"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/blackText" />

                    <TextView
                        android:id="@+id/contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/phone_number"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:textColor="@color/greyText" />
                </LinearLayout>
            </LinearLayout>
            <!-- [END] NUMBER Selection using Dialog -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/date_of_call"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/date_of_call"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/empty_placeholder_string" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/time_of_call"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/time_of_call"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/empty_placeholder_string" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/call_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/call_duration"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/empty_placeholder_string" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/call_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/call_type"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:visibility="gone" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/call_type_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="4dp"
                android:text="@string/call_type"
                android:textColorHighlight="@android:color/primary_text_dark" />

            <RadioGroup
                android:id="@+id/call_type_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/incoming_type_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/incoming_radiobutton_background"
                    android:button="@android:color/transparent"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/outgoing_type_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/outgoing_radiobutton_background"
                    android:button="@android:color/transparent" />

                <RadioButton
                    android:id="@+id/missedcall_type_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/missedcall_radiobutton_background"
                    android:button="@android:color/transparent" />
            </RadioGroup>

            <!--INSERT TO SCHEDULE - DISABLED NOW-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/insert_time_checkbox"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/insert_now" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/date_of_insertion"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/date_of_insertion"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/empty_placeholder_string" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/time_of_insertion"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/time_of_insertion"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/empty_placeholder_string" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/submitButtonGreen"
                android:text="@string/submit"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>